# jepa-code

./: .gitattributes  .gitignore  AGENTS.md  README.md  TODO.md  justfile  skills-lock.json  text-jepa-default.yaml
architechtures/v1/: .gitignore  AGENTS.md  README.md  base-jepa-block-pseudocode.md  intertwined-hjepa-plan.md  intertwined_hjepa.py  intertwined_hjepa.yaml  learning.md  pyproject.toml  sigreg.py  sigreg_short_check.yaml  test_intertwined_hjepa_shapes.py  test_intertwined_hjepa_training_step.py
architechtures/v1/.codex/: learning.md
architechtures/v1/data/: inspect_cached_fineweb.py
architechtures/v1/scripts/: inspect_checkpoint.py  train_intertwined_hjepa.py
architechtures/v1/sweep_configs/: beta001_lambda03_warm1k_ema099.yaml  beta001_lambda1.yaml  beta003_lambda03_warm1k_ema099.yaml  beta003_lambda1.yaml  full_beta0001_lambda1.yaml  full_jepa_no_sigreg.yaml  full_lm_only.yaml
architechtures/v1/test/: test_autoresearch_wrapper.py  test_inspect_checkpoint.py  test_intertwined_hjepa_shapes.py  test_intertwined_hjepa_training_step.py  test_train_intertwined_hjepa.py
architechtures/v2/: .gitignore  =6.0  README.md  TODO.md  base-jepa-block-pseudocode.md  intertwined-hjepa-literature.md  intertwined-hjepa-plan.md  intertwined_hjepa.py  intertwined_hjepa.yaml  justfile  learning.md  pyproject.toml  sigreg.py  sigreg_short_check.yaml  text_helpers.py
architechtures/v2/.codex/: learning.md
architechtures/v2/autoresearch/: .gitignore  README.md  analysis.ipynb  architecture_debug_2026-04-17.md  experiment_log.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
architechtures/v2/scripts/: compare_activation_checkpoints.py  inspect_checkpoint.py  probe_checkpoint.py  train_intertwined_hjepa.py
architechtures/v2/sweep_configs/: baseline_beta01_lambda1.yaml  best_wd0_125m.yaml  compact_16m_auxlighter_probe.yaml  compact_16m_decoupled_nojepa.yaml  compact_16m_horizon_groups.yaml  compact_16m_horizon_groups_t2.yaml  compact_16m_layers_4_8_mean_t1_t4_drop20.yaml  compact_16m_layers_6_8_mean_t1_t4_drop25.yaml  compact_16m_lm_only.yaml  compact_16m_topthird_final_span_state.yaml  compact_16m_topthird_jepa.yaml  compact_16m_topthird_mean_t1_t4.yaml  compact_16m_topthird_mean_t1_t4_auxup.yaml  compact_16m_topthird_mean_t1_t4_cosine.yaml  compact_16m_topthird_mean_t1_t4_drop20.yaml  compact_16m_topthird_mean_t1_t4_gated_adapter.yaml  compact_16m_topthird_mean_t1_t4_gated_adapter_open005.yaml  compact_16m_topthird_mean_t1_t4_gated_adapter_open005_lmonly.yaml  compact_16m_topthird_mean_t1_t4_gated_adapter_open005_stopgrad.yaml  compact_16m_topthird_mean_t1_t4_gated_adapter_open1.yaml  compact_16m_topthird_mean_t1_t4_gqa.yaml  compact_16m_topthird_mean_t1_t4_split_latents.yaml  compact_16m_topthird_residual_delta_t1_t4.yaml  (+7 more)
architechtures/v4/: .gitignore  AGENTS.md  README.md  intertwined-hjepa-literature.md  justfile  pyproject.toml  sigreg.py  test_dataset_helpers.py
(+127 files in other folders)
