[project]
name = "intertwined-hjepa-v1"
version = "0.1.0"
description = "Intertwined H-JEPA training and inspection scripts"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "sentencepiece>=0.2.0",
    "torch==2.9.1",
    "torchao>=0.15.0",
    "flash-attn-4==4.0.0b9",
    "wandb>=0.21.3",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "tokenizers>=0.22.0",
    "transformers>=4.57.3",
]

[tool.uv]
package = false
default-groups = ["dev"]
link-mode = "symlink"

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
