[project]
name = "intertwined-hjepa-autoresearch"
version = "0.1.0"
description = "Autoresearch wrapper for the Intertwined H-JEPA repo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "sentencepiece>=0.2.0",
    "torch==2.9.1",
    "torchao>=0.15.0",
    "flash-attn-4==4.0.0b9",
    "wandb>=0.21.3",
]

[tool.uv]
package = false
link-mode = "symlink"

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
